--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
 				<div class="description">Menkheperre, nombre de coronación de Tutmosis III.</div>
 			</div>
 			<div class="word-item">
-				<div class="image"><img src="img/mntw.PNG"/></div>
+				<div class="image"><img src="img/Mntw.PNG"/></div>
 				<div class="transliteration">mntw.png</div>
 				<div class="word"><i>Mntw</i></div>
 				<div class="description">Dios Montu.</div>
@@ -468,19 +468,19 @@
 			</div>
 			<div class="word-item">
 				<div class="image"><img src="img/Ptkh.PNG"/></div>
-				<div class="transliteration">Ptkh.png</div>
+				<div class="transliteration">ptkh.png</div>
 				<div class="word"><i>Ptḥ</i></div>
 				<div class="description">Ptah.</div>
 			</div>
 			<div class="word-item">
 				<div class="image"><img src="img/Ptkh-Skr.PNG"/></div>
-				<div class="transliteration">Ptkh-Skr.png</div>
+				<div class="transliteration">ptkh-skr.png</div>
 				<div class="word"><i>Ptḥ-Skr</i></div>
 				<div class="description">Ptah-Sokar, dios funerario de Men-Nefer (Menfis).</div>
 			</div>
 			<div class="word-item">
 				<div class="image"><img src="img/r'_2.PNG"/></div>
-				<div class="transliteration">r'_2.png</div>
+				<div class="transliteration">R'_2.png</div>
 				<div class="word"><i>rꜥ</i></div>
 				<div class="description">Re.</div>
 			</div>
@@ -491,7 +491,7 @@
 				<div class="description">(part. sust.) "Sematauy", lit. Aquel que une las Dos Tierras.</div>
 			</div>
 			<div class="word-item">
-				<div class="image"><img src="img/Stsh.PNG"/></div>
+				<div class="image"><img src="img/stsh.PNG"/></div>
 				<div class="transliteration">Stsh.png</div>
 				<div class="word"><i>Stš</i></div>
 				<div class="description">Set.</div>
@@ -3429,7 +3429,7 @@
 		<div class="word-list">
 			<div class="word-item">
 				<div class="image"><img src="img/ndj-khrt.PNG"/></div>
-				<div class="transliteration">ndj-khrt.png</div>
+				<div class="transliteration">ndj-xrt.png</div>
 				<div class="word"><i>nḏ-ḥrt</i></div>
 				<div class="description">Saludar. Lit. Dar saludo(s), presentar respeto(s).</div>
 			</div>
